--- a/Catalogo.html
+++ b/Catalogo.html
@@ -7,20 +7,23 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
- <div class="header-inner">
-  <div class="logo">  
-    <img src="imagens/logo.png" alt="Logo">
- </div>
-    <nav class="menu">
-      <a href="index.html">Início</a>
-      <a href="Catalogo.html">Catálogo</a>
-      <a href="sobre.html">Sobre</a>
-    </nav>
-          <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+  <header>
+    <div class="header-inner">
+      <div class="logo">
+        <a href="index.html">
+          <img src="imagens/logo.png" alt="Logo">
+        </a>
+      </div>
+
+      <nav class="menu">
+        <a href="index.html">Início</a>
+        <a href="Catalogo.html">Catálogo</a>
+        <a href="Sobre.html">Sobre</a>
+      </nav>
+
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </div>
-  </div>
-</header>
+  </header>
 
 <main>
   <section class="catalogo">
@@ -129,7 +132,7 @@
         <nav class="menu">
           <a href="index.html">Início</a>
           <a href="Catalogo.html">Catálogo</a>
-          <a href="sobre.html">Sobre</a>
+          <a href="Sobre.html">Sobre</a>
         </nav>
       </div>
 
