--- a/produto.html
+++ b/produto.html
@@ -9,20 +9,23 @@
 </head>
 <body>
 
-<header>
-  <div class="header-inner">
-    <div class="logo">
-      <a href="Home.html"><img src="imagens/logo.png" alt="Logo"></a>
+  <header>
+    <div class="header-inner">
+      <div class="logo">
+        <a href="index.html">
+          <img src="imagens/logo.png" alt="Logo">
+        </a>
+      </div>
+
+      <nav class="menu">
+        <a href="index.html">Início</a>
+        <a href="Catalogo.html">Catálogo</a>
+        <a href="Sobre.html">Sobre</a>
+      </nav>
+
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </div>
-    <nav class="menu">
-      <a href="Home.html">Início</a>
-      <a href="Catalogo.html">Catálogo</a>
-      <a href="sobre.html">Sobre</a>
-    </nav>
-          <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-    </div>
-  </div>
-</header>
+  </header>
 
 <main>
   <section class="produto-container">
@@ -89,7 +92,7 @@
         <nav class="menu">
           <a href="Home.html">Início</a>
           <a href="Catalogo.html">Catálogo</a>
-          <a href="sobre.html">Sobre</a>
+          <a href="Sobre.html">Sobre</a>
         </nav>
       </div>
 
